= 4.7.75 - TBD =
Changed: Optimised to request chunked user_data for reports table ( [#1192](https://github.com/WPChill/download-monitor/issues/1192) )

= 4.7.74 - 01.02.2023 =
Fixed: Encoded commas in file name ( [#1187](https://github.com/WPChill/download-monitor/issues/1187) )
Fixed: iThemes security and reports REST api ( [#1185](https://github.com/WPChill/download-monitor/issues/1185) )
Fixed: End js code execution after window.location.href ( [#1203](https://github.com/WPChill/download-monitor/issues/1203) )
Changed: File size is now displayed as a value with 2 decimals ( [#1204](https://github.com/WPChill/download-monitor/issues/1204) )

= 4.7.73 - 17.01.2023 =
Fixed: XHR error on <a> tags without href attribute ( [#1188](https://github.com/WPChill/download-monitor/issues/1188) )
Fixed: Click to copy shortcode from admin list view ( [#1072](https://github.com/WPChill/download-monitor/issues/1072) )

= 4.7.72 - 09.01.2023 =
Changed: Enqueue welcome banner assets only on the welcome page ( [#1153](https://github.com/WPChill/download-monitor/issues/1153) )
Fixed: Issue preventing the display of texts according to the user language ( [#961](https://github.com/WPChill/download-monitor/issues/961) )
Added: Empty downloads display ( [#882](https://github.com/WPChill/download-monitor/issues/882) )
Added: Delete files when Version or Download is deleted ( [#1034](https://github.com/WPChill/download-monitor/issues/1034) )
Changed: Global XHR for download links, not depending on class anylonger ( [#1157](https://github.com/WPChill/download-monitor/issues/1157) )
Fixed: Error when PayPal payment if product price bigger than 1000 ( [#1155](https://github.com/WPChill/download-monitor/issues/1155) )
Fixed: URLencode only for server hosted files ( [#1158](https://github.com/WPChill/download-monitor/issues/1158) )
Fixed: Fatal error if product contains deleted download ( [#1160](https://github.com/WPChill/download-monitor/issues/1160) )